[gd_scene load_steps=2 format=3 uid="uid://c1x8v8yh5s3dg"]

[ext_resource type="Script" path="res://scripts/stats_screen.gd" id="1_statsscreen"]

[node name="StatsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_statsscreen")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "GAME STATISTICS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ResultLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "üéØ VICTORY"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TimeLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "‚è±Ô∏è Time: 02:45"

[node name="ScoreLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üèÜ Score: 1000"

[node name="DistanceLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üìè Distance: 45.2m"

[node name="SpeedLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üö∂ Speed: 2.1m/s"

[node name="SpottedLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üëÅÔ∏è Times Spotted: 0"

[node name="SuspectedLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "ü§ê Times Suspected: 2"

[node name="CameraSwitchLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üîÑ Camera Switches: 15"

[node name="InteractionsLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üéÆ Interactions: 3"

[node name="ResetsLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "‚ôªÔ∏è Resets Used: 0"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="PlayAgainButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Play Again"

[node name="MenuButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Main Menu"